--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,42 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button_fibonacci"
+        android:id="@+id/btn_fibonacci_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="29dp"
         android:layout_marginTop="16dp"
-        android:onClick="Button_fibonacci"
-        android:text="@string/fibonacci"
+        android:layout_marginEnd="160dp"
+        android:onClick="onClickFibonacci"
+        android:text="@string/btn_fibonacci_main"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_encrypt_decrypt_main"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_encrypt_decrypt_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:onClick="onClickEncrypt_Decrypt"
+        android:text="@string/btn_encrypt_decrypt_main"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Fibonacci" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_fibonacci_main" />
+
+    <Button
+        android:id="@+id/btn_calculadora"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:onClick="onClickCalculator"
+        android:text="@string/btn_calculadora"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="@+id/btn_encrypt_decrypt_main"
+        app:layout_constraintTop_toBottomOf="@+id/btn_encrypt_decrypt_main" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
